--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Document</title>
 </head>
 <body>
-    <h1>hello from forgot page</h1>
+    
+    <h1 class="animate__animated animate__bounce animate__infinite" style="color:red;">An animated element</h1>
 </body>
 </html>
