--- a/expense.html
+++ b/expense.html
@@ -58,6 +58,13 @@
     </form>
     <br>
     <br>
+    <div id="leaderboard-modal" class="modal">
+      <div style="background-color: rgba(1, 3, 26, 0.514);color:white"class="modal-content">
+        <span style="font-size: 30px;"class="close">&times;</span>
+        <h1 style="color:gold">LEADER BOARD <span><i class="fa-solid fa-trophy"></i></span></h1>
+        <ul id="leaderboard-list"></ul>
+      </div>
+    </div>
 
     <table class="table" style="margin-left: 30px; width: calc(100% - 60px);box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);">
         <thead>
