--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>hii from leaderboard</h1>
+    <ul id="leaderboard"></ul>
+    <script src="js/leaderboard.js"></script>
 </body>
 </html>
