Making Expense App Production ready

--- a/expense.html
+++ b/expense.html
@@ -61,7 +61,7 @@
     <div id="leaderboard-modal" class="modal">
       <div style="background-color: rgba(1, 3, 26, 0.514);color:white"class="modal-content">
         <span style="font-size: 30px;"class="close">&times;</span>
-        <h1 style="color:gold">LEADER BOARD <span><i class="fa-solid fa-trophy"></i></span></h1>
+        <h1 style="color:gold;margin-left: 100px;">LEADER BOARD <span><i class="fa-solid fa-trophy"></i></span></h1><br>
         <ul id="leaderboard-list"></ul>
       </div>
     </div>
