frontend forgot password

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Document</title>
+    <title>forgot-password</title>
 </head>
 <body>
-    
-    <h1 class="animate__animated animate__bounce animate__infinite" style="color:red;">An animated element</h1>
+    <form style="background-color: pink;color:white;padding:30px"onsubmit="handle(event)">
+        <label for="email">ENTER YOUR EMAIL-ID</label>
+        <input id="email"type="email"name="email"><br><br>
+        <button id="send"type="submit">Submit</button>
+    </form>
+   <script src="js/forgot-password.js"></script>
 </body>
 </html>
