--- a/forgot-password.html
+++ b/forgot-password.html
@@ -13,5 +13,6 @@
         <button id="send"type="submit">Submit</button>
     </form>
    <script src="js/forgot-password.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
 </body>
 </html>
