--- a/resetpassword.html
+++ b/resetpassword.html
@@ -11,7 +11,7 @@
 
         <h2>Create a new password</h2>
         
-        <form onsubmit="handleSubmit(e)" >
+        <form onsubmit="handleSubmit(event)" >
             
             <label for="new-password">Enter new password</label>
             <input type="password" name="new-password" id="new-password" required><br><br>
