--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="css/reset-password.css">
+    <script src="https://kit.fontawesome.com/5a6a11ca8f.js" crossorigin="anonymous"></script>
+    
     <title>forgot-password</title>
 </head>
 <body>
-    <form style="background-color: pink;color:white;padding:30px"onsubmit="handle(event)">
+    <form onsubmit="handle(event)">
+        <i style="font-size: 40px;color: #b3b237" class="fa-solid fa-lock"></i>
         <label for="email">ENTER YOUR EMAIL-ID</label>
-        <input id="email"type="email"name="email"><br><br>
+        <input id="email"type="email"name="email">
         <button id="send"type="submit">Submit</button>
     </form>
    <script src="js/forgot-password.js"></script>
