--- a/expense.html
+++ b/expense.html
@@ -37,6 +37,7 @@
     </ul>
 </div>
 
+
 </nav>
 <body style="background: url('https://wallpapers.com/images/hd/grey-texture-background-d29qkeb2b46ygint.jpg')no-repeat center center fixed;background-size: cover;background-position: center;">
    
@@ -95,6 +96,11 @@
           </table>
       </div>
     </div>
+    <div class="page">
+      <button id="prev" value="0" class="page-btn hide" style="border-radius: 20px;left:1160px;margin-top: 3px;">0</button>
+      <button id="curr" value="1" class="page-btn"style="border-radius: 9px;left:1170px">1</button>
+      <button id="next" value="2" class="page-btn"style="border-radius: 20px;left:1180px;">2</button>
+  </div>
 
     <table class="table" style="margin-left: 30px;width: calc(100% - 60px);box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);">
       <thead>
