--- a/expense.html
+++ b/expense.html
@@ -37,6 +37,19 @@
     </ul>
 </div>
 
+<div class="number-of-expenses">
+  <label for="display-expenses">Select total expenses to see per page : </label>
+  <select name="display-expenses" id="display-expenses">
+      
+      <option value="5" selected>5</option>
+      <option value="10">10</option>
+      <option value="15">15</option>
+      <option value="20">20</option>
+      <option value="25">25</option>
+      <option value="30">30</option>
+      <option value="35">35</option>
+  </select>
+</div>
 
 </nav>
 <body style="background: url('https://wallpapers.com/images/hd/grey-texture-background-d29qkeb2b46ygint.jpg')no-repeat center center fixed;background-size: cover;background-position: center;">
