making code production ready

--- a/report.html
+++ b/report.html
@@ -13,10 +13,10 @@
 
 </head>
 
-<body style=" background: url('https://img.freepik.com/premium-photo/personal-expenses-concept-financial-analysis-background-golden-coins-pile-icons_488220-960.jpg')no-repeat center center fixed;backdrop-filter: blur(0px);background-size: 110%;background-position:center;text-align:left;"class="container my-2">
+<body style="background-color:burlywood;background:url('https://img.freepik.com/premium-photo/personal-expenses-concept-financial-analysis-background-golden-coins-pile-icons_488220-960.jpg')no-repeat center center fixed;backdrop-filter: blur(0px);background-size: cover;background-position:center;text-align:left;"class="container my-2">
 
     <div class="" id="report-select">
-        <label style="color:white;margin-left:453px"for="expense-display">Expenses : </label>
+        <label style="color:white;margin-left:0px"for="expense-display">Expenses : </label>
 
         <select name="expense-display" id="expense-display">
             <option value="daily">Day wise</option>
@@ -26,13 +26,13 @@
         </select>
 
         <form class="my-2" id="daily-form">
-            <label style="color:white;margin-left:453px"for="date">Select the date : </label>
+            <label style="color:white;margin-left:0px"for="date">Select the date : </label>
             <input type="date" name="date" id="date" required>
             <button type="submit">submit</button>
         </form>
 
         <form class="hide my-2" id="monthly-form">
-            <label style="color:white;margin-left:453px" for="month-picker">Select the month : </label>
+            <label style="color:white;margin-left:0px" for="month-picker">Select the month : </label>
 
             <select name="month-picker" id="month-picker" required>
                 <option value="01">January</option>
@@ -64,7 +64,7 @@
 
 
         <form class="hide my-2" id="yearly-form">
-            <label style="color:white;margin-left:453px"for="year-picker">Select the year : </label>
+            <label style="color:white;margin-left:0px"for="year-picker">Select the year : </label>
 
             <select name="year-picker" id="year-picker" required>
                 <option value="2021">2021</option>
