--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>login page</title>
-  
+  <link rel="stylesheet" href="css/button.css">
     <script src="https://kit.fontawesome.com/5a6a11ca8f.js" crossorigin="anonymous"></script>
 
 
